--- a/.project
+++ b/.project
@@ -29,4 +29,16 @@
 		<nature>org.eclipse.cdt.managedbuilder.core.managedBuildNature</nature>
 		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>ecen5823-assignment3-Ganeshkm10.slcp</name>
+			<type>1</type>
+			<locationURI>PROJECT_LOC/ecen5823-assignment3-Ganeshkm10.slcp</locationURI>
+		</link>
+		<link>
+			<name>ecen5823-assignment3-Ganeshkm10.slps</name>
+			<type>1</type>
+			<locationURI>PROJECT_LOC/ecen5823-assignment3-Ganeshkm10.slps</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
